--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,10 @@ theme:
   custom_dir: resources/overrides
   features:
     - navigation.footer
+markdown_extensions:
+  - markdown_include.include:
+      base_path: .
+  - md_in_html
 plugins:
   - tags
   - mike:
