--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,5 +59,20 @@ citation:
   - thesecondkeyword
   - "a third keyword"
   repository: "https://github.com/citation-file-format/my-research-software"
-signposting:
-  cffUrl: https://github.com/FAIR-by-Design-Methodology/templates/blob/main/CITATION.cff
+signposting_linkset: https://raw.githubusercontent.com/FAIR-by-Design-ToT/templates/main/linkset.json # do not update manually
+signposting_default_profile: '' # update with an URL towards the profile used for the Markdown pages (optional)
+# signposting_gitbook_url: https://gitbook.example.com # leave commented (prefixed with `#`) if using GitHub Pages with the default domain.
+signposting_exclusions:
+  - 'venv/**'
+  - 'external-resources/**'
+  - 'Feedback/**'
+  - '**/Activities/**'
+  - '*/Assessment/**'
+  - 'index.md'
+  - '02 process_description.md'
+  - '03 glossary.md'
+  - 'template_unit_lesson_plan.md'
+  - '**/*facilitator_guide.md'
+  - '*syllabus.md'
+  - '**/*_plan.md'
+  - '**/template_content.md'
